testsuite/tests/parser/should_fail/RecordDotSyntaxFail2.stderr
RecordDotSyntaxFail2.hs:9:15: parse error on input ‘.’
